--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
+matplotlib = "*"
+pyinstaller = "*"
+python-dev-tools = "*"
 
 [dev-packages]
 
